繋がりのある哲学者も表示されるようにした

--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
   <head>
     <meta charset="utf-8" />
     <title>tetugaku_test</title>
+    <style>
+      @font-face {
+        font-family: "刻明朝";
+        src: url("https://cdn.leafscape.be/kokumin/font_1_kokumr_1.00_rls_web.woff2")
+          format("woff2");
+      }
+    </style>
     <link rel="stylesheet" href="/styles/font-styles.css" />
     <link rel="stylesheet" href="/styles/body-styles.css" />
     <link rel="stylesheet" href="/styles/wrapper-styles.css" />
