思想家の詳細を表示させた

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
@@ -7,6 +8,13 @@
         font-family: "刻明朝";
         src: url("https://cdn.leafscape.be/kokumin/font_1_kokumr_1.00_rls_web.woff2")
           format("woff2");
+      }
+      body {
+        font-family: "刻明朝", serif;
+      }
+
+      #content {
+        font-family: "刻明朝", serif;
       }
     </style>
     <link rel="stylesheet" href="/styles/font-styles.css" />
